# Auto-Creator

./: README.md  docker-compose.yml
.ddev/: config.yaml
ai_service/: Dockerfile  app.py  gunicorn.conf.py  models.py  openai_client.py  pyproject.toml
ai_service/ai_service.egg-info/: PKG-INFO  requires.txt
web/modules/custom/ai_integration/: ai_integration.info.yml  ai_integration.module
