[tool.poetry]
name = "ai-service"
version = "0.1.0"
description = "Backend service to generate captions and images from LLMs"
authors = ["Avi Mehta"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.0"
openai = "^1.0.0"
python-dotenv = "^1.0.0"
requests = "^2.30.0"
gunicorn = "^21.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"